Fix consent glow on firefox

--- a/web/src/components/CookieConsent/style.scss
+++ b/web/src/components/CookieConsent/style.scss
@@ -54,6 +54,7 @@
         z-index: -1;
         width: 100%;
         height: 100%;
+        left: 0;
 
         -webkit-box-shadow: 0px -6px 66px 19px globalStyles.$red;
         -moz-box-shadow: 0px -6px 66px 19px globalStyles.$red;
